--- a/PMT_Programmieraufgabe/.classpath
+++ b/PMT_Programmieraufgabe/.classpath
@@ -6,9 +6,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/leonjaeger/Desktop/Wirtschaftsinformatik/2.Semester/PM/Praktikum/Uebungsblatt01/turban.utils.jar.v0_2/turban.utils.jar" sourcepath="/PMT"/>
-	<classpathentry kind="lib" path="/Users/leonjaeger/Desktop/Wirtschaftsinformatik/2.Semester/PM/Praktikum/Uebungsblatt01/turban.utils.jar.v0_2/log4j-1.2.17.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="/Users/leonjaeger/Desktop/mariadb-java-client-2.5.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leonj/iCloudDrive/Desktop/Wirtschaftsinformatik/2.Semester/PM/Praktikum/Uebungsblatt01/turban.utils.jar.v0_2/turban.utils.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leonj/iCloudDrive/Desktop/mariadb-java-client-2.5.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
